# Project-template

./: README.md
project_template/: README.md  pyproject.toml
project_template/docs/: Git.md  Virtual_Enviroment.md  mlflow.md
