[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aaronruiz5674", email = "aaron.ruiz@opendeusto.es" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
